--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <!-- Header & Hero Section -->
     <header class="hero-section">
     <div class="hero-overlay"></div>
-    <!-- REPLACE the <nav> in ALL .html files with this -->
 <nav class="main-nav container-nav">
     <div class="logo">
         <a href="index.html">
@@ -113,7 +112,7 @@
                     <p>Build. Optimize. Elevate. We dismantle digital complexities, transforming them into powerful engines for sustained online growth. Discover how clients have entrusted Aetheri Web Design to amplify their market presence, perfect their user experience, and drive substantial conversions.</p>
                 </div>
                 <div class="brands-grid">
-                    <div class="brand-card" style="background-image: url('https://images.pexels.com/photos/3780104/pexels-photo-3780104.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
+                    <div class="brand-card" style="background-image: url('https://s7d1.scene7.com/is/image/mcdonaldsstage/DC_202307_8936_EVM_M_BigMac_Coke_1564x1564:product-header-mobile?wid=1313&hei=1313&dpr=off');">
                         <div class="card-overlay">
                             <div class="card-content">
                                 <span class="brand-logo-text">McDonald's</span>
@@ -123,7 +122,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="brand-card" style="background-image: url('https://images.pexels.com/photos/842961/pexels-photo-842961.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
+                    <div class="brand-card" style="background-image: url('https://www.unilever.com/content-images/92ui5egz/production/c706b2dabd89d77fab2d51eca4026c6ef31a3579-1920x1080.jpg?rect=0,36,1920,1008&w=1200&h=630&fm=jpg');">
                         <div class="card-overlay">
                             <div class="card-content">
                                 <span class="brand-logo-text">CLEAR</span>
@@ -133,7 +132,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="brand-card" style="background-image: url('https://images.pexels.com/photos/207692/pexels-photo-207692.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
+                    <div class="brand-card" style="background-image: url('https://www.brown.edu/sites/default/files/styles/wide_xlrg/public/2019-04/01_About.jpg?h=920929c4&itok=lgYUTHil');">
                         <div class="card-overlay">
                             <div class="card-content">
                                 <span class="brand-logo-text">BROWN UNIVERSITY</span>
@@ -143,7 +142,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="brand-card" style="background-image: url('https://images.pexels.com/photos/2811087/pexels-photo-2811087.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
+                    <div class="brand-card" style="background-image: url('https://retailtechpodcast.com/admin/uploads/podcasts/ShopWorncompany_1618761788.png');">
                         <div class="card-overlay">
                             <div class="card-content">
                                 <span class="brand-logo-text">SHOPWORN</span>
@@ -165,21 +164,15 @@
             </div>
         </section>
 
-        <!-- Partners Section -->
-        <section class="partners-section">
-            <div class="container">
-                <div class="section-header">
-                    <h2>WE PARTNER WITH THE BEST-IN-CLASS TECHNOLOGY PLATFORMS.</h2>
+        <!-- Mission Section -->
+        <section class="mission-section-index">
+            <div class="container two-col-layout">
+                <div class="mission-statement-index">
+                    <h2>Our Mission</h2>
+                    <p>To dismantle digital complexities and build powerful, intuitive web experiences that empower our clients to achieve sustained online growth.</p>
                 </div>
-                <div class="partners-grid">
-                    <span>company</span>
-                    <span>company</span>
-                    <span>company</span>
-                    <span>company</span>
-                    <span>company</span>
-                    <span>company</span>
-                    <span>company</span>
-                    <span>company</span>
+                <div class="mission-description-index">
+                    <p>At Aetheri, we believe that a website is more than just code and pixels; it's the digital heartbeat of a business. It's the first impression, the primary sales tool, and the core of a brand's online identity. Founded on the principle of partnership, we work alongside our clients—not just for them—to understand their unique challenges and ambitious goals. Our team combines creative vision with technical expertise to craft solutions that are not only beautiful but also measurable and effective.</p>
                 </div>
             </div>
         </section>
@@ -221,7 +214,7 @@
         <section class="ambitious-cta-section">
             <div class="cta-overlay"></div>
             <div class="container cta-content">
-                <h2>Empowering ambitious companies and interesting people to thrive online.</h2>
+                <h2>We empower ambitious companies & people to thrive online.</h2>
                 <a href="about.html" class="btn btn-secondary">GET TO KNOW US</a>
             </div>
         </section>
