--- a/about.html
+++ b/about.html
@@ -108,50 +108,24 @@
         <section class="team-section">
             <div class="container">
                 <div class="section-header">
-                    <h2>Meet The Experts</h2>
-                    <p>The passionate minds behind Aetheri Web Design. We are strategists, designers, developers, and creators united by a love for the web.</p>
+                    <h2>Meet The Designer</h2>
+                    <p>I take your vision, and meticulously bring to life. I blend design, strategy, and development to build websites that inspire and perform.</p>
                 </div>
                 <div class="team-grid">
                     <!-- Team Member 1 -->
                     <div class="team-member-card">
-                        <img src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Photo of Jane Doe">
+                        <img src="assets/headshot.png" alt="Photo of Tyson Fitzgerald">
                         <div class="team-member-info">
-                            <h4>Jane Doe</h4>
-                            <span>Founder & CEO</span>
+                            <h4>Tyson Fitzgerald</h4>
+                            <span>Founder & Developer</span>
                         </div>
                     </div>
-                    <!-- Team Member 2 -->
-                    <div class="team-member-card">
-                        <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Photo of John Smith">
-                        <div class="team-member-info">
-                            <h4>John Smith</h4>
-                            <span>Lead Developer</span>
-                        </div>
-                    </div>
-                    <!-- Team Member 3 -->
-                    <div class="team-member-card">
-                        <img src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Photo of Emily White">
-                        <div class="team-member-info">
-                            <h4>Emily White</h4>
-                            <span>Head of Design (UI/UX)</span>
-                        </div>
-                    </div>
-                     <!-- Team Member 4 -->
-                     <div class="team-member-card">
-                        <img src="https://images.pexels.com/photos/1516680/pexels-photo-1516680.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Photo of Michael Brown">
-                        <div class="team-member-info">
-                            <h4>Michael Brown</h4>
-                            <span>SEO Strategist</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
 
         <!-- Join Us Section (reusing work-proud style) -->
         <section class="work-proud-section">
             <div class="container work-proud-content">
-                <h3>INTERESTED IN JOINING OUR TEAM?</h3>
+                <h3>INTERESTED IN JOINING THE TEAM?</h3>
                 <a href="contact.html" class="learn-more-link">View Open Positions <span class="arrow-circle">→</span></a>
             </div>
         </section>
@@ -176,7 +150,7 @@
             <div class="footer-bottom">
                 <div class="footer-contact">
                     <div class="logo">Aetheri Web Design</div>
-                    <a href="mailto:contact@dotlogics.com">contact@aetheriwebdesign.com</a>
+                    <a href="mailto:contact@aetheriwebdesign.com">contact@aetheriwebdesign.com</a>
                     <a href="#" class="btn btn-primary">Book a call →</a>
                 </div>
                 <div class="footer-locations">
