--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
         </section>
 
-        <!-- Building Brands Section -->
+        <!-- Building Brands Section
         <section class="brands-section">
             <div class="container">
                 <div class="section-header">
@@ -155,14 +155,54 @@
                 </div>
             </div>
         </section>
+
+    -->
+
+        <!-- Our Process Section -->
+        <section class="process-section">
+            <div class="container">
+                <div class="section-header">
+                    <h2>OUR STREAMLINED WAAS PROCESS</h2>
+                    <p>From initial consultation to ongoing support, our five-step process ensures your website is built efficiently, launched flawlessly, and maintained perfectly, all for a simple monthly fee.</p>
+                </div>
+                <div class="process-grid">
+                    <div class="process-step">
+                        <span class="step-number">01</span>
+                        <h3>Consult</h3>
+                        <p>We begin by understanding your business, goals, and audience to map out the perfect strategy for your website's success.</p>
+                    </div>
+                    <div class="process-step">
+                        <span class="step-number">02</span>
+                        <h3>Design & Prototype</h3>
+                        <p>Our team creates a stunning, user-friendly design mockup and refines it with your feedback until it perfectly captures your brand.</p>
+                    </div>
+                    <div class="process-step">
+                        <span class="step-number">03</span>
+                        <h3>Develop & Build</h3>
+                        <p>Using modern, clean code, we bring the design to life, building a fast, responsive, and SEO-optimized website from the ground up.</p>
+                    </div>
+                    <div class="process-step">
+                        <span class="step-number">04</span>
+                        <h3>Deploy & Launch</h3>
+                        <p>After rigorous testing, we handle the entire launch process. Your new website is introduced to the world, seamlessly.</p>
+                    </div>
+                    <div class="process-step">
+                        <span class="step-number">05</span>
+                        <h3>Support & Maintain</h3>
+                        <p>Our job isn't done at launch. We provide continuous hosting, security, updates, and support to keep your site running perfectly.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         
         <!-- Work Proud Section -->
         <section class="work-proud-section">
             <div class="container work-proud-content">
-                <h3>WORK TO BE PROUD OF</h3>
-                <a href="portfolio.html" class="learn-more-link">Learn More <span class="arrow-circle">→</span></a>
+                <h3>Learn more about WaaS</h3>
+                <a href="waas.html" class="learn-more-link">Learn More <span class="arrow-circle">→</span></a>
             </div>
         </section>
+    
 
         <!-- Mission Section -->
         <section class="mission-section-index">
@@ -239,7 +279,7 @@
             <div class="footer-bottom">
                 <div class="footer-contact">
                     <div class="logo">Aetheri Web Design</div>
-                    <a href="mailto:contact@dotlogics.com">contact@aetheriwebdesign.com</a>
+                    <a href="mailto:contact@aetheriwebdesign.com">contact@aetheriwebdesign.com</a>
                     <a href="#" class="btn btn-primary">Book a call →</a>
                 </div>
                 <div class="footer-locations">
