--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
             <div class="footer-bottom">
                 <div class="footer-contact">
                     <div class="logo">Aetheri Web Design</div>
-                    <a href="mailto:contact@dotlogics.com">contact@aetheriwebdesign.com</a>
+                    <a href="mailto:contact@aetheriwebdesign.com">contact@aetheriwebdesign.com</a>
                     <a href="#" class="btn btn-primary">Book a call →</a>
                 </div>
                 <div class="footer-locations">
