made social links work in footer, only index page

--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@
                     </div>
                 </div>
                 <div class="footer-connect">
-                    <h3>Let's<br>Work<br>Together.</h3>
-                    <div class="social-icons">
-                        <span>X</span>
-                        <span>in</span>
-                        <span>O</span>
-                        <span>NY</span>
-                    </div>
-                </div>
+    <h3>Let's<br>Work<br>Together.</h3>
+    <div class="social-icons">
+        <!-- X Link -->
+        <a href="https://x.com" target="_blank" rel="noopener noreferrer">X</a>
+        <!-- LinkedIn Link -->
+        <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">in</a>
+    </div>
+</div>
             </div>
             <p class="copyright">© 2025 Aetheri Web Design. All rights reserved.</p>
         </div>
