changes 8/18 before blog push

--- a/about.html
+++ b/about.html
@@ -25,8 +25,11 @@
     <div class="nav-right">
         <ul class="nav-links">
             <!-- Note: The active-nav class will still be on the correct page link -->
+            <li><a href="index.html" class="home-btn">Home</a></li>
             <li><a href="services.html" class="serv-btn">Services</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+
+            <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
+
             <li><a href="blog.html">Blog</a></li>
             <li><a class="about-btn" href="about.html">About</a></li>
         </ul>
@@ -60,55 +63,43 @@
             </div>
         </section>
 
-        <!-- Our Story Section -->
-        <section class="story-section">
-            <div class="container">
-                <div class="section-header">
-                    <h2>Our Journey</h2>
-                    <p>From a small startup to a leading digital partner.</p>
-                </div>
-                <div class="story-timeline">
-                    <!-- Timeline Item 1 -->
-                    <div class="story-item">
-                        <div class="story-year">2018</div>
-                        <div class="story-content">
-                            <h3>Aetheri is Born</h3>
-                            <p>Founded in a small office in Columbus, our journey began with a simple goal: to build better websites for local businesses.</p>
-                        </div>
-                    </div>
-                    <!-- Timeline Item 2 -->
-                    <div class="story-item">
-                        <div class="story-year">2020</div>
-                        <div class="story-content">
-                            <h3>Expanding Services</h3>
-                            <p>We expanded our offerings beyond web design to include comprehensive SEO and digital strategy, helping our clients achieve holistic growth.</p>
-                        </div>
-                    </div>
-                    <!-- Timeline Item 3 -->
-                    <div class="story-item">
-                        <div class="story-year">2022</div>
-                        <div class="story-content">
-                            <h3>First Major Award</h3>
-                            <p>Recognized as "Digital Agency of the Year" for our innovative work with e-commerce brands and our commitment to client success.</p>
-                        </div>
-                    </div>
-                     <!-- Timeline Item 4 -->
-                     <div class="story-item">
-                        <div class="story-year">Today</div>
-                        <div class="story-content">
-                            <h3>Partners in Growth</h3>
-                            <p>We proudly serve a diverse portfolio of clients, from ambitious startups to enterprise-level corporations, driving results that matter.</p>
-                        </div>
-                    </div>
-                </div>
+        <!-- Our Philosophy Section -->
+<section class="philosophy-section">
+    <div class="container">
+        <div class="section-header">
+            <h2>Our Philosophy</h2>
+            <p>Our approach is built on a foundation of core principles that guide every project.</p>
+        </div>
+        <div class="philosophy-grid">
+            <!-- Philosophy Card 1 -->
+            <div class="philosophy-card">
+                <h3>Partnership</h3>
+                <p>We work alongside our clients, not just for them. Your success is our success, and we're dedicated to understanding your unique challenges and ambitious goals.</p>
             </div>
-        </section>
+            <!-- Philosophy Card 2 -->
+            <div class="philosophy-card">
+                <h3>Innovation</h3>
+                <p>We're constantly exploring the latest technologies and design trends to ensure your digital presence is cutting-edge, future-proof, and ahead of the curve.</p>
+            </div>
+            <!-- Philosophy Card 3 -->
+            <div class="philosophy-card">
+                <h3>Results-Driven</h3>
+                <p>Every decision we make is guided by a focus on measurable outcomes. We craft solutions that are not only beautiful but also effective in driving your business forward.</p>
+            </div>
+             <!-- Philosophy Card 4 -->
+             <div class="philosophy-card">
+                <h3>Craftsmanship</h3>
+                <p>We believe in the art of digital creation. Our team blends creative vision with technical expertise, meticulously bringing your vision to life with precision and care.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
         <!-- Meet the Team Section -->
         <section class="team-section">
             <div class="container">
                 <div class="section-header">
-                    <h2>Meet The Designer</h2>
+                    <h2>Meet the Dev</h2>
                     <p>I take your vision, and meticulously bring to life. I blend design, strategy, and development to build websites that inspire and perform.</p>
                 </div>
                 <div class="team-grid">
@@ -126,7 +117,7 @@
         <section class="work-proud-section">
             <div class="container work-proud-content">
                 <h3>INTERESTED IN JOINING THE TEAM?</h3>
-                <a href="contact.html" class="learn-more-link">View Open Positions <span class="arrow-circle">→</span></a>
+                <a href="contact.html" class="learn-more-link">Shoot us a message <span class="arrow-circle">→</span></a>
             </div>
         </section>
 
@@ -160,16 +151,26 @@
                     </div>
                 </div>
                 <div class="footer-connect">
-                    <h3>Let's<br>Work<br>Together.</h3>
-                    <div class="social-icons">
-                        <span>X</span>
-                        <span>in</span>
-                        <span>O</span>
-                        <span>NY</span>
-                    </div>
-                </div>
+    <h3>Let's<br>Work<br>Together.</h3>
+    <div class="social-icons">
+    <!-- X Link -->
+    <a href="#" target="_blank" rel="noopener noreferrer" aria-label="Follow us on X">
+        <!-- SVG icon for X (formerly Twitter) -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
+        </svg>
+    </a>
+    <!-- LinkedIn Link -->
+    <a href="https://www.linkedin.com/in/tyson-fitzgerald-6785801b5/" target="_blank" rel="noopener noreferrer" aria-label="Connect with us on LinkedIn">
+        <!-- SVG icon for LinkedIn -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.25 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93-.94 0-1.62.61-1.62 1.93V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.38 1.02 3.38 3.54z"></path>
+        </svg>
+    </a>
+</div>
+</div>
             </div>
-            <p class="copyright">© 2025 Aetheri Web Design. All rights reserved.</p>
+            <p class="copyright">© 2025 Aetheri Web Design LLC. All rights reserved.</p>
         </div>
     </footer>
 
