--- a/services.html
+++ b/services.html
@@ -23,15 +23,18 @@
 
             <!-- Wrapper for nav links and contact button -->
             <div class="nav-right">
-                <ul class="nav-links">
-                    <li><a href="services.html" class="serv-btn active-nav">Services</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a class="about-btn" href="about.html">About</a></li>
-                </ul>
-                <a href="contact.html" class="contact-btn">Let's Talk</a>
-            </div>
-            
+        <ul class="nav-links">
+            <!-- Note: The active-nav class will still be on the correct page link -->
+            <li><a href="index.html" class="home-btn">Home</a></li>
+            <li><a href="services.html" class="serv-btn">Services</a></li>
+
+            <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
+
+            <li><a href="blog.html">Blog</a></li>
+            <li><a class="about-btn" href="about.html">About</a></li>
+        </ul>
+        <a href="contact.html" class="contact-btn">Let's Talk</a>
+    </div>
             <!-- Hamburger Menu Button -->
             <button class="hamburger-menu">
                 <div class="bar"></div>
@@ -41,7 +44,7 @@
         </nav>
         
         <div class="hero-content container">
-            <h1>Our Services & Pricing</h1>
+            <h1>Our Services</h1>
         </div>
     </header>
 
@@ -70,11 +73,12 @@
                                 <span class="discount-badge">SAVE 17%</span>
                             </div>
                             <p class="price-term">Per month</p>
-                            <p class="card-description">For new businesses & startups</p>
+                            <p class="card-description">For businesses & people wanting to grow</p>
                         </div>
                         <div class="card-features-action">
                             <ul class="features-list">
-                                <li><span class="checkmark">✓</span>Custom Website Design</li>
+                                <li><span class="checkmark">✓</span>Custom Website Design & Build</li>
+                                <li class="subpoint"><span class="point">•</span> <p class="subpoint-p"> everything from Custom Site Build Plan </p></li>
                                 <li><span class="checkmark">✓</span>Secure Hosting & Domain</li>
                                 <li><span class="checkmark">✓</span>Ongoing Maintenance & Support</li>
                                 <li><span class="checkmark">✓</span>Basic SEO Setup</li>
@@ -89,19 +93,21 @@
                         <div class="card-main-info">
                             <h3>Custom Site Build</h3>
                             <p class="price-term-custom">Starting at</p>
-                            <div class="price-tag-custom">$1500+</div>
+                            <div class="price-tag-custom">$2500+</div>
                             <p class="price-term">One time</p>
-                            <p class="card-description">For multiple teams & enterprise needs</p>
+                            <p class="card-description">For businesses & people who want a tailored site</p>
                         </div>
                         <div class="card-features-action">
                             <ul class="features-list">
-                                <li><span class="checkmark">✓</span>Everything in SEO Growth</li>
-                                <li><span class="checkmark">✓</span>Bespoke Ground-Up Development</li>
+                                <li><span class="checkmark">✓</span>Consultation</li>
+                                <li><span class="checkmark">✓</span>Ground-Up Static Site Development</li>
                                 <li><span class="checkmark">✓</span>Advanced Scalability Architecture</li>
                                 <li><span class="checkmark">✓</span>E-commerce & API Integrations</li>
-                                <li><span class="checkmark">✓</span>Dedicated Project Manager</li>
+                                <li><span class="checkmark">✓</span>Backend Systems & Framework</li>
+                                <li><span class="checkmark">✓</span>Up to 2 Revision Rounds</li>
+                                <li><span class="checkmark">✓</span>Form Submission Integrations</li>
                             </ul>
-                            <a href="custom-build.html" class="btn btn-light">Get started with Enterprise</a>
+                            <a href="custom-build.html" class="btn btn-light">Get a Custom Build</a>
                         </div>
                     </div>
 
@@ -167,16 +173,26 @@
                     </div>
                 </div>
                 <div class="footer-connect">
-                    <h3>Let's<br>Work<br>Together.</h3>
-                    <div class="social-icons">
-                        <span>X</span>
-                        <span>in</span>
-                        <span>O</span>
-                        <span>NY</span>
-                    </div>
-                </div>
+    <h3>Let's<br>Work<br>Together.</h3>
+    <div class="social-icons">
+    <!-- X Link -->
+    <a href="#" target="_blank" rel="noopener noreferrer" aria-label="Follow us on X">
+        <!-- SVG icon for X (formerly Twitter) -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
+        </svg>
+    </a>
+    <!-- LinkedIn Link -->
+    <a href="https://www.linkedin.com/in/tyson-fitzgerald-6785801b5/" target="_blank" rel="noopener noreferrer" aria-label="Connect with us on LinkedIn">
+        <!-- SVG icon for LinkedIn -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.25 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93-.94 0-1.62.61-1.62 1.93V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.38 1.02 3.38 3.54z"></path>
+        </svg>
+    </a>
+</div>
+</div>
             </div>
-            <p class="copyright">© 2025 Aetheri Web Design. All rights reserved.</p>
+            <p class="copyright">© 2025 Aetheri Web Design LLC. All rights reserved.</p>
         </div>
     </footer>
 
