--- a/thank-you.html
+++ b/thank-you.html
@@ -6,7 +6,6 @@
     <title>Message Sent - Aetheri Web Design</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to your main stylesheet for consistency -->
     <style>
-        /* Some basic styles for the thank you page */
         .thank-you-container {
             text-align: center;
             padding: 100px 20px;
@@ -26,7 +25,7 @@
         .thank-you-container a {
             display: inline-block;
             padding: 12px 25px;
-            background-color: #007bff; /* Example color, use your brand color */
+            background-color: #007bff;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
@@ -34,7 +33,7 @@
             transition: background-color 0.3s;
         }
         .thank-you-container a:hover {
-            background-color: #0056b3; /* Darker shade on hover */
+            background-color: #0056b3;
         }
     </style>
 </head>
