--- a/waas.html
+++ b/waas.html
@@ -22,7 +22,6 @@
             </div>
             <div class="nav-right">
         <ul class="nav-links">
-            <!-- Note: The active-nav class will still be on the correct page link -->
             <li><a href="index.html" class="home-btn">Home</a></li>
             <li><a href="services.html" class="serv-btn">Services</a></li>
 
@@ -197,7 +196,7 @@
     <div class="social-icons">
     <!-- X Link -->
     <a href="#" target="_blank" rel="noopener noreferrer" aria-label="Follow us on X">
-        <!-- SVG icon for X (formerly Twitter) -->
+        <!-- SVG icon for X -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
             <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
         </svg>
