replaced missing nav links line

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- Wrapper for nav links and contact button -->
     <div class="nav-right">
+            <ul class="nav-links">
             <li><a href="index.html" class="home-btn">Home</a></li>
             <li><a href="services.html" class="serv-btn">Services</a></li>
 
