--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
                 <section class="latest-posts-section">
                     <div class="container">
                         <div class="section-header">
-                            <h2>ACCELERATING DIGITAL COMMERCE</h2>
-                            <p>Everything you need to know to think like a challenger.</p>
+                            <h2>EXPANDING KNOWLEDGE</h2>
+                            <p>Everything you need to know to stay ahead of the game.</p>
                         </div>
-                        <h2>Latest Articles</h2>
+                        <h2>Latest Posts</h2>
                 <div class="articles-grid" id="articles-grid">
                 </div>
 
