changed png landing to webp

--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,8 @@
                             <h3>Business Hours</h3>
                             <p>Monday - Friday<br>9:00 AM - 5:00 PM (EST)</p>
                         </div>
+
+                        <!--
                         <div class="info-block">
                             <h3>Connect With Us</h3>
                             <div class="social-icons">
@@ -105,7 +107,8 @@
                                 <span>O</span>
                                 <span>NY</span>
                             </div>
-                        </div>
+                        </div> -->
+                        
                     </div>
                 </div>
             </div>
