--- a/thank-you.html
+++ b/thank-you.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Sent - Aetheri Web Design</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your main stylesheet for consistency -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="assets/aetheriicon.png" sizes="32x32">
     <style>
         .thank-you-container {
             text-align: center;
